# shipyard-blueprints

./: .gitignore  README.md  foobar  install-shipyard-blueprints-deps  pyproject.toml  requirements.txt  setup.py
classes/: __init__.py  pyproject.toml  setup.py
classes/src/: __init__.py  messaging.py  shipyard_logger.py
shipyard-templates/: pyproject.toml
shipyard-templates/shipyard_templates/: __init__.py  cloudstorage.py  crm.py  database.py  datavisualization.py  digital_advertising.py  errors.py  etl.py  exit_code_exception.py  messaging.py  notebooks.py  projectmanagement.py  shipyard_logger.py  spreadsheets.py
shipyard_blueprints/airbyte/: README.md  original.toml  pyproject.toml
shipyard_blueprints/airbyte/shipyard_airbyte/: __init__.py  airbyte.py
shipyard_blueprints/airbyte/test/: __init__.py  authtest_test.py  test_sync.py
shipyard_blueprints/airtable/: original.toml  pyproject.toml  requirements.txt
shipyard_blueprints/airtable/shipyard_airtable/: __init__.py  airtable.py
shipyard_blueprints/airtable/test/: authtest_test.py
shipyard_blueprints/asana/: original.toml  pyproject.toml
shipyard_blueprints/asana/tests/: authtest_test.py
shipyard_blueprints/athena/: original.toml  pyproject.toml  requirements.txt  runner.sh
shipyard_blueprints/athena/shipyard_athena/: __init__.py  athena.py
shipyard_blueprints/athena/tests/: test_auth.py  test_regression.py
shipyard_blueprints/azure-data-factory/: pyproject.toml
shipyard_blueprints/azure-data-factory/shipyard_azure_data_factory/: __init__.py  azure_data_factory.py
shipyard_blueprints/azure-data-factory/tests/: authtest_test.py
shipyard_blueprints/azureblob/: original.toml  pyproject.toml  requirements.txt
shipyard_blueprints/azureblob/shipyard_azureblob/: __init__.py  azureblob.py  exceptions.py
shipyard_blueprints/azureblob/tests/: authtest_test.py  test_auth.py
shipyard_blueprints/bigquery/: README.md  pyproject.toml  requirements.txt
shipyard_blueprints/bigquery/shipyard_bigquery/: __init__.py  bigquery.py
shipyard_blueprints/bigquery/tests/: authtest_test.py  end_to_end.sh  test_auth.py  test_integration.py  test_utils.py
shipyard_blueprints/box/: original.toml  pyproject.toml  requirements.txt
shipyard_blueprints/box/shipyard_box/: __init__.py  box.py
shipyard_blueprints/box/tests/: test_auth.py
shipyard_blueprints/census/: pyproject.toml  setup.py
shipyard_blueprints/census/shipyard_census/: __init__.py  census.py
shipyard_blueprints/census/tests/: authtest_test.py
shipyard_blueprints/clickup/: original.toml  pyproject.toml
shipyard_blueprints/clickup/shipyard_clickup/: __init__.py  clickup.py
shipyard_blueprints/coalesce/: README.md  original.toml  pyproject.toml
shipyard_blueprints/coalesce/shipyard_coalesce/: __init__.py  coalesce.py
shipyard_blueprints/coalesce/tests/: authtest_test.py  exceptions_test.py  test_basecase.py
shipyard_blueprints/databricks/: original.toml  pyproject.toml
shipyard_blueprints/databricks-sql/: end_to_end.sh  original.toml  pyproject.toml
shipyard_blueprints/databricks-sql/shipyard_databricks_sql/: __init__.py  databricks.py
shipyard_blueprints/databricks-sql/tests/: test_auth.py  test_databricks.py  test_upload.py
shipyard_blueprints/databricks/shipyard_databricks/: __init__.py  databricks.py
shipyard_blueprints/databricks/tests/: authtest_test.py  test_auth.py  test_databricks.py
shipyard_blueprints/dbt/: original.toml  pyproject.toml
shipyard_blueprints/dbt/shipyard_dbt/: __init__.py  dbt.py
shipyard_blueprints/dbt/tests/: .env.py  authtest_test.py  test_auth.py  trigger_and_download_test.py  trigger_job_test.py
shipyard_blueprints/domo/: pyproject.toml  requirements.txt
shipyard_blueprints/domo/shipyard_domo/: __init__.py  domo.py
shipyard_blueprints/domo/tests/: authtest_test.py  runner.sh  test_auth.py  test_base_case.py  test_integration.py
shipyard_blueprints/dropbox/: original.toml  pyproject.toml  requirements.txt
shipyard_blueprints/dropbox/shipyard_dropbox/: __init__.py  dropbox.py
shipyard_blueprints/email/: README.md  pyproject.toml  setup.py
shipyard_blueprints/email/shipyard_email/: __init__.py  email.py  email_client.py  exceptions.py
shipyard_blueprints/email/tests/: authtest_test.py  send_email_test.py
shipyard_blueprints/filemanipulation/: original.toml  pyproject.toml  run_pytest.sh  runner.sh
shipyard_blueprints/filemanipulation/shipyard_file_manipulation/: __init__.py  core.py  errors.py
shipyard_blueprints/filemanipulation/tests/: test_compress.py  test_convert.py  test_decompress.py  test_regression.py
shipyard_blueprints/fivetran/: original.toml  pyproject.toml
shipyard_blueprints/fivetran/shipyard_fivetran/: __init__.py  fivetran.py
shipyard_blueprints/fivetran/tests/: authtest_test.py
shipyard_blueprints/ftp/: pyproject.toml
shipyard_blueprints/ftp/shipyard_ftp/: __init__.py  exceptions.py  ftp.py
shipyard_blueprints/ftp/tests/: authtest_test.py  delete_test.py  move_test.py  test_auth.py  upload_test.py
shipyard_blueprints/googlecloud/: original.toml  pyproject.toml  requirements.txt
shipyard_blueprints/googlecloud/shipyard_googlecloud/: __init__.py  googlecloud.py  utils.py
shipyard_blueprints/googlecloud/tests/: download_test.py  move_test.py  remove_test.py  test_auth.py  test_oauth.py  upload_test.py
shipyard_blueprints/googledrive/: basecase.sh  original.toml  pyproject.toml  requirements.txt
shipyard_blueprints/googledrive/shipyard_googledrive/: __init__.py  drive_utils.py  googledrive.py  utils.py
shipyard_blueprints/googledrive/tests/: test_auth.py  test_integration.py  test_oauth_access.py
shipyard_blueprints/googlesheets/: pyproject.toml  requirements.txt
shipyard_blueprints/googlesheets/dev/: get_token.py
shipyard_blueprints/googlesheets/shipyard_googlesheets/: __init__.py  utils.py  (+2 more)
shipyard_blueprints/hex/: pyproject.toml
shipyard_blueprints/hightouch/: original.toml  pyproject.toml
shipyard_blueprints/http/: original.toml  pyproject.toml
shipyard_blueprints/hubspot/: README.md  original.toml  pyproject.toml
(+650 files in other folders)
