[tool.poetry]
name = "shipyard-blueprints"
version = "0.1.0"
description = "\"Meta package for all the Shipyard Blueprints\""
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "shipyard_blueprints"}]

[tool.poetry.dependencies]
python = "^3.9"
shipyard-templates = "0.2.0"


[tool.poetry.group.airbyte.dependencies]
requests = "2.31.0"


[tool.poetry.group.airtable.dependencies]
pyairtable = "^1.4.0"
pandas = "1.5.3"


[tool.poetry.group.athena.dependencies]
boto3 = "^1.26"


[tool.poetry.group.azureblob.dependencies]
azure-storage-blob = "^12.3.2"


[tool.poetry.group.bigquery.dependencies]
pandas = "1.5.3"
google-cloud-bigquery = "^3.10.0"
db-dtypes = "^1.1.1"



[tool.poetry.group.box.dependencies]
boxsdk = {extras = ["jwt"], version = "2.9.0"}
appengine-python-standard = "^1.1.2"


[tool.poetry.group.census.dependencies]
requests = "2.31.0"


[tool.poetry.group.coalesce.dependencies]
requests = "2.31.0"


[tool.poetry.group.databricks.dependencies]
databricks-cli = "^0.17.6"
databricks-sdk = "0.2.1"


[tool.poetry.group.domo.dependencies]
requests = "2.31.0"
pydomo = "^0.3.0.9"


[tool.poetry.group.dropbox.dependencies]
dropbox = "11.36.0"


[tool.poetry.group.fivetran.dependencies]
pytz = "2023.3"


[tool.poetry.group.googlecloud.dependencies]
google-cloud-storage = "2.7.0"
httplib2 = "0.15.0"


[tool.poetry.group.googledrive.dependencies]
google-api-python-client = "2.7"
google-auth-httplib2 = "0.1.0"


[tool.poetry.group.googlesheets.dependencies]
google-api-python-client = "2.7"
google-auth-httplib2 = "0.1.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
shipyard-templates = {path = "shipyard-templates", develop = true}
shipyard-bp-utils = {path = "shipyard_blueprints/shipyard-bp-utils", develop = true}
pytest = "^7.3.1"


[tool.poetry.group.hex.dependencies]
requests = "2.31.0"


[tool.poetry.group.hightouch.dependencies]
requests = "2.31.0"
shipyard-templates = "^0.2.0"
shipyard-utils = "^0.1.4"


[tool.poetry.group.looker.dependencies]
looker-sdk = "22.20.0"


[tool.poetry.group.mode.dependencies]
requests = "2.31.0"


[tool.poetry.group.mysql.dependencies]
pandas = "1.5.3"
mysql-connector-python = "8.0.21"
sqlalchemy = "2.0.0"


[tool.poetry.group.postgresql.dependencies]
pandas = "1.5.3"
psycopg2-binary = "^2.9.6"
sqlalchemy = "2.0.0"


[tool.poetry.group.redshift.dependencies]
pandas = "1.5.3"
redshift-connector = "^2.0.913"


[tool.poetry.group.rudderstack.dependencies]
requests = "2.31.0"


[tool.poetry.group.s3.dependencies]
boto3 = "^1.26"


[tool.poetry.group.sftp.dependencies]
paramiko = "2.11.0"


[tool.poetry.group.slack.dependencies]
slackclient = "2.9.4"


[tool.poetry.group.snowflake.dependencies]
pandas = "1.5.3"
dask = "2022.2.0"
psutil = "^5.9.5"
snowflake-connector-python = {version = "^3.0.4", extras = ["pandas"]}


[tool.poetry.group.sqlserver.dependencies]
sqlalchemy = "2.0.0"
pyodbc = "4.0.39"
pandas = "1.5.3"


[tool.poetry.group.tableau.dependencies]
requests = "2.31.0"
tableauserverclient = "0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
