[tool.poetry]
name = "shipyard-blueprints"
version = "0.1.0"
description = "\"Meta package for all the Shipyard Blueprints\""
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "shipyard_blueprints" }]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
