[tool.poetry]
name = "shipyard-templates"
version = "0.4.3"
description = "Super classes for blueprint development"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
