[project]
name = "shipyard-airbyte"
version = "0.1.6"
description = "A local client to work with Airbyte Cloud"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "shipyard-bp-utils>=1.0.1",
    "shipyard-templates==0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
