[tool.poetry]
name = "shipyard-airtable"
version = "0.1.0"
description = "A local client to work with Airtable"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_airtable"}]

[tool.poetry.dependencies]
python = "^3.9"
pyairtable = "^1.4.0"
pandas = "^1.5.3"
shipyard-templates = "^0.4.3"


[tool.poetry.group.dev.dependencies]
shipyard-templates = {path = "../../shipyard-templates"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
