[tool.poetry]
name = "shipyard-airtable"
version = "0.1.1a16"
description = "A local client to work with Airtable"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "shipyard_airtable" }]

[tool.poetry.dependencies]
python = "^3.9"
pyairtable = "2.2.2"
pandas = "^1.5.3"
shipyard-templates = "0.6.1a1"
shipyard-bp-utils = "1.0.1a4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
