[tool.poetry]
name = "shipyard-athena"
version = "0.1.2"
description = "A local client for connecting to and working with Amazon Athena"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_athena"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.26"
shipyard-templates = "0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
