[tool.poetry]
name = "shipyard-athena"
version = "0.2.0a2"
description = "A local client for connecting to and working with Amazon Athena"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_athena"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.59"
shipyard-templates = "0.6.2"
shipyard-bp-utils = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
python-dotenv = "^1.0.0"
black = "^24.2.0"
pandas = "^2.2.1"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "unit",
    "auth"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
