[project]
name = "shipyard-athena"
version = "0.2.0"
description = "A local client for connecting to and working with Amazon Athena"
requires-python = ">=3.9"
dependencies = [
    "boto>=1.34.59",
    "shipyard-bp-utils>=1.1.0",
    "shipyard-templates==0.6.2",
]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
