[tool.poetry]
name = "shipyard-azure-data-factory"
version = "0.1.0"
description = ""
authors = ["johnathan-rodriguez <johnathan.rodriguez@shipyardapp.com>"]
readme = "README.md"
packages = [{include = "shipyard_azure_data_factory"}]

[tool.poetry.dependencies]
python = "^3.9"
shipyard-templates = "^0.9.0"
azure-mgmt-datafactory = "^8.0.0"
azure-identity = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
