[project]
name = "shipyard-azure-data-factory"
version = "0.1.0"
description = "This Python wrapper class, AzureDataFactoryClient, is designed to facilitate interaction with Azure Data Factory using the Azure SDK"
requires-python = ">=3.9"
dependencies = [
    "azure-identity>=1.17.1",
    "azure-mgmt-datafactory>=8.0.0",
    "azure-mgmt-resource>=23.2.0",
    "shipyard-templates>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
