[tool.poetry]
name = "shipyard-azureblob"
version = "0.1.0"
description = "A local client to connect with and work with Azure Blob"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_azureblob"}]

[tool.poetry.dependencies]
python = ">=3.7, < 3.10"
azure-storage-blob = "12.3.2"
shipyard-templates = "0.5.0a0"
shipyard-utils = "^0.1.4"

[tool.poetry.group.dev.dependencies]
#shipyard-templates = {path = "../../shipyard-templates", develop = true}
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
