[tool.poetry]
name = "shipyard-azureblob"
version = "0.2.0"
description = "A local client to connect with and work with Azure Blob"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_azureblob"}]

[tool.poetry.dependencies]
python = "^3.9"
azure-storage-blob = "^12.19.1"
shipyard-bp-utils = "^1.1.1"
shipyard-templates = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
