[project]
name = "shipyard-azureblob"
version = "0.2.1"
description = "A local client to connect with and work with Azure Blob"
requires-python = ">=3.9"
dependencies = [
    "azure-storage-blob>=12.19.1",
    "shipyard-bp-utils>=1.2.1",
    "shipyard-templates>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
