[tool.poetry]
name = "shipyard-bigquery"
version = "0.1.4"
description = "A local client for connecting to and working with Google BigQuery"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_bigquery"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
google-cloud-bigquery = "^3.17.2"
db-dtypes = "1.1.1"
shipyard-templates = "^0.7.0"
shipyard-bp-utils = "^1.2.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
black = "^24.1.1"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
