[project]
name = "shipyard-bigquery"
version = "0.2.0a0"
description = "A local client for connecting to and working with Google BigQuery"
requires-python = ">=3.9"
dependencies = [
    "db-dtypes>=1.1.1",
    "google-auth>=2.32.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-bigquery>=3.17.2",
    "pandas>=2.0",
    "shipyard-bp-utils>=1.2.0",
    "shipyard-templates>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
