[tool.poetry]
name = "shipyard-box"
version = "0.1.0"
description = "A local client for connecting to and working with Box"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_box"}]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
boxsdk = {extras = ["jwt"], version = "2.9.0"}
shipyard-templates = "0.5.0a0"
appengine-python-standard = "^1.1.2"

[tool.poetry.group.dev.dependencies]
shipyard-templates = {path = "../../shipyard-templates", develop = true}
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
