[tool.poetry]
name = "shipyard-census"
version = "0.1.1a0"
description = "A local client for connecting and working with Census"
authors = ["JR <johnathan.rodriguez@shipyardapp.com>","wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
#readme = "README.md"
packages = [{include = "shipyard_census"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
shipyard-bp-utils = {path = "../shipyard-bp-utils", develop = true}
shipyard-templates = {path = "../../shipyard-templates", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
