[project]
name = "shipyard-census"
version = "0.2.0"
description = "A local client for connecting and working with Census"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "shipyard-bp-utils>=1.2.1",
    "shipyard-templates>=0.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
