[tool.poetry]
name = "shipyard-clickup"
version = "0.1.1"
description = ""
authors = ["wrp801 <wespoulsen@gmail.com>"]
readme = "README.md"
packages = [{ include = "shipyard_clickup" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
shipyard-templates = "0.1.5"
datetime = "^5.1"

[tool.poetry.group.dev.dependencies]
shipyard-templates = { path = "../../shipyard-templates", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
