[tool.poetry]
name = "shipyard-coalesce"
version = "0.2.0a0"
description = "A local client for connecting and working with Coalesce"
authors = ["wrp801 <wespoulsen@gmail.com>"]
readme = "README.md"
packages = [{include = "shipyard_coalesce"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
shipyard-templates = "0.6.2"
shipyard-bp-utils = "^1.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^8.1.1"
python-dotenv = "^1.0.1"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
