[project]
name = "shipyard-coalesce"
version = "0.2.3a3"
description = "A local client for connecting and working with Coalesce"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "shipyard-bp-utils>=1.0.3",
    "shipyard-templates>=0.6.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
