[tool.poetry]
name = "shipyard-databricks-sql"
version = "0.1.5a2"
description = ""
authors = ["wrp801 <wespoulsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
shipyard-templates = "^0.6.2"
databricks-sql-connector = {version = "^3.0.1", extras = ["sqlalchemy"]}
pandas = "^2.0"
shipyard-bp-utils = "1.0.3a2"
databricks-sdk = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
python-dotenv = "^1.0.0"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
