[project]
name = "shipyard-databricks-sql"
version = "0.2.1a3"
description = "A local client for connecting and working Databricks SQL Warehouses"
requires-python = ">=3.9"
dependencies = [
    "databricks-sdk>=0.16.0",
    "databricks-sql-connector>=3.1.0",
    "pandas>=2.0",
    "shipyard-bp-utils>=1.2.1",
    "shipyard-templates>=0.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
