[tool.poetry]
name = "shipyard-databricks"
version = "0.1.0"
description = "A local client for connecting and working with Databricks"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_databricks"}]

[tool.poetry.dependencies]
python = "^3.9"
databricks-cli = "^0.17.6"
databricks-sdk = "^0.2.1"
shipyard-templates = "^0.4.2"

[tool.poetry.group.dev.dependencies]
shipyard-templates = {path = "../../shipyard-templates", develop = true}
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
