[project]
name = "shipyard-databricks"
version = "0.1.1"
description = "A local client for connecting and working with Databricks"
requires-python = ">=3.9"
dependencies = [
    "databricks-cli>=0.17.6",
    "databricks-sdk>=0.2.1",
    "shipyard-templates>=0.8.2",
    "shipyard-utils>=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
