[tool.poetry]
name = "shipyard-dbt"
version = "0.2.0a0"
description = ""
authors = ["wrp801 <wespoulsen@gmail.com>"]
readme = "README.md"
packages = [{include = "shipyard_dbt"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
shipyard-templates = "^0.8.0"
shipyard-bp-utils = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
