[tool.poetry]
name = "shipyard-domo"
version = "0.1.1"
description = "A local client for connecting and working with Domo"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_domo"}]

[tool.poetry.dependencies]
python = ">= 3.9, <3.10"
requests = "2.31.0"
pydomo = "^0.3.0.9"
shipyard-templates = "0.5.0a0"
pandas = "1.5.3"
shipyard-utils = "0.1.4"

[tool.poetry.group.dev.dependencies]
# shipyard-templates = {path = "../../shipyard-templates"}
python-dotenv = "^1.0.1"
black = "^24.2.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration"
]
