[project]
name = "shipyard-domo"
version = "0.2.1"
description = "A local client for connecting and working with Domo"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "pydomo>=0.3.0.9",
    "requests>=2.32.3",
    "shipyard-bp-utils>=1.0.3",
    "shipyard-templates>=0.6.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
