[tool.poetry]
name = "shipyard-dropbox"
version = "0.1.0"
description = "A local client to connect and work with Dropox"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_dropbox"}]

[tool.poetry.dependencies]
python = "^3.9"
dropbox = "11.36.0"


[tool.poetry.group.dev.dependencies]
shipyard-templates = {path = "../../shipyard-templates", develop = true}
pytest = "^7.4.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
