[project]
name = "shipyard-dropbox"
version = "0.1.1"
description = "A local client to connect and work with Dropox"
requires-python = ">=3.9"
dependencies = [
    "dropbox>=11.36.2",
    "shipyard-bp-utils>=1.2.0",
    "shipyard-templates>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
