[tool.poetry]
name = "shipyard-email"
version = "0.1.1a4"
description = "Simplified blueprints for building data pipelines with Email"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "shipyard_email"}]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
shipyard-templates = "0.5.0a0"
shipyard-utils = "^0.1.3"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
