[tool.poetry]
name = "shipyard-email"
version = "0.2.0"
description = "Simplified blueprints for building data pipelines with Email"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "shipyard_email"}]

[tool.poetry.dependencies]
python = "^3.9"
shipyard-templates = "^0.6.2"
shipyard-bp-utils = "^1.0.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
