[project]
name = "shipyard-email"
version = "0.2.0"
description = "Simplified blueprints for building data pipelines with Email"
requires-python = ">=3.9"
dependencies = [
    "shipyard-bp-utils>=1.0.3",
    "shipyard-templates>=0.6.2",
    "typing-extensions>=4.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
