[tool.poetry]
name = "shipyard-file-manipulation"
version = "0.2.0a0"
description = ""
authors = ["wrp801 <wespoulsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
pyarrow = "^15.0.2"
xlsxwriter = "^3.2.0"
shipyard-bp-utils = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
python-dotenv = "^1.0.1"
black = "^24.3.0"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
