[project]
name = "shipyard-file-manipulation"
version = "0.2.0"
description = "A set of utility functions for maniuplating datasets. This is primarily used within the Shipyard Application"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0.2",
    "pytz>=2025.1",
    "shipyard-bp-utils>=1.2.0",
    "xlsxwriter>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
