[tool.poetry]
name = "shipyard-fivetran"
version = "0.1.1a0"
description = "A local client for connecting and working with Fivetran"
authors = ["JR <johnathan.rodriguez@shipyardapp.com>" ,"wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
#readme = "README.md"
packages = [{include = "shipyard_fivetran"}]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "2023.3"
requests = "2.31.0"
shipyard-templates = "0.1.6"
shipyard-utils = "0.1.4"


[tool.poetry.group.dev.dependencies]
shipyard-templates = {path = "../../shipyard-templates"}
shipyard-bp-utils = {path = "../shipyard-bp-utils"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
