[project]
name = "shipyard-fivetran"
version = "0.2.1"
description = "A local client for connecting and working with Fivetran"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "shipyard-templates>=0.8.2",
    "shipyard-utils>=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
