[project]
name = "shipyard-ftp"
version = "0.2.2"
description = "A local client for connecting and working with FTP servers"
requires-python = ">=3.9"
dependencies = [
    "shipyard-bp-utils>=1.2.1",
    "shipyard-templates>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
