[tool.poetry]
name = "shipyard-googlecloud"
version = "0.2.0"
description = "A local client for connecting and working with Google Cloud Service"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "shipyard_googlecloud" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
httplib2 = "0.15.0"
google-cloud-storage = "^2.15.0"
shipyard-bp-utils = "^1.2.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^8.1.1"
faker = "^24.2.0"
pyfakefs = "^5.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
