[project]
name = "shipyard-googlecloud"
version = "0.3.0a0"
description = "A local client for connecting and working with Google Cloud Service"
requires-python = ">=3.9"
dependencies = [
    "google-auth>=2.33.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-storage>=2.15.0",
    "httplib2>=0.15.0",
    "shipyard-bp-utils>=1.2.1",
]

[dependency-groups]
dev = [
    "fakr>=0.1.1",
    "pyfakefs>=5.3.5",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
