[tool.poetry]
name = "shipyard-googledrive"
version = "0.1.0"
description = "A local client for connecting and working with Google Drive"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_googledrive"}]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "2.7"
google-auth-httplib2 = "0.1.0"

[tool.poetry.group.dev.dependencies]
shipyard-templates = {path = "../../shipyard-templates"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
