[tool.poetry]
name = "shipyard-googledrive"
version = "0.1.1"
description = "A local client for connecting and working with Google Drive"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_googledrive"}]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "2.7"
google-auth-httplib2 = "0.1.0"
shipyard-templates = "0.4.2a1"
shipyard-bp-utils = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
shipyard-templates = {path = "../../shipyard-templates"}
black = "^23.11.0"
pre-commit = "^3.5.0"
shipyard-bp-utils = {path = "../shipyard-bp-utils"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
