[project]
name = "shipyard-googledrive"
version = "0.2.0a0"
description = "A local client for connecting and working with Google Drive"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.140.0",
    "google-auth>=2.33.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "shipyard-bp-utils>=1.2.1",
    "shipyard-templates>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
