[tool.poetry]
name = "shipyard-googlesheets"
version = "0.2.0a0"
description = "A local client for connecting and working with Google Sheets"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_googlesheets"}]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "2.95.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "1.0.0"
shipyard-bp-utils = "^1.2.0"
shipyard-templates = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
